--- a/theme.css
+++ b/theme.css
@@ -1,5 +1,5 @@
 :root {
-            /* GREEN */
+    /* GREEN */
     /* green text color  */
     --green-dark-txt: #1c4c1c;
     --green-blue-txt: #009207;
@@ -13,10 +13,10 @@
     /* green borders */
     --green-notes-border: 2.5px solid #bad6ba;
     --green-links-border: 2.5px solid #009207;
-    --green-button-border-dark: 1.5px solid #1c4c1c;
+    --green-button-border-dark: 1.5px solid #009207;
     --green-editor-border: 1px solid #bad6ba;
 
-        /* RED */
+    /* RED */
     /* red text color  */
     --red-dark-txt: #4c1c1c;
     --red-blue-txt: #920000;
@@ -30,7 +30,7 @@
     /* red borders */
     --red-notes-border: 2.5px solid #d6baba;
     --red-links-border: 2.5px solid #920000;
-    --red-button-border-dark: 1.5px solid #4c1c1c;
+    --red-button-border-dark: 1.5px solid #920000;
     --red-editor-border: 1px solid #d6baba;
 }
 
@@ -65,7 +65,7 @@ body {
 }
 
 body.theme-green {
-        /* text color  */
+    /* text color  */
     --dark-txt: var(--green-dark-txt);
     --blue-txt: var(--green-blue-txt);
     /* background color */
@@ -79,12 +79,12 @@ body.theme-green {
     /*borders*/
     --notes-border: var(--green-notes-border);
     --links-border: 2.5px solid var(--green-links-border);
-    /*--button-border-dark: 1.5px solid var(--green-button-border-dark);  FUNKAR INTE??*/
+    --button-border-blue: var(--green-button-border-dark);
     --editor-border: var(--green-editor-border);
 }
 
 body.theme-red {
-        /* text color  */
+    /* text color  */
     --dark-txt: var(--red-dark-txt);
     --blue-txt: var(--red-blue-txt);
     /* background color */
@@ -98,16 +98,61 @@ body.theme-red {
     /*borders*/
     --notes-border: var(--red-notes-border);
     --links-border: 2.5px solid var(--red-links-border);
-    /*--button-border-dark: 1.5px solid var(--red-button-border-dark);  FUNKAR INTE??*/
+    --button-border-blue: var(--red-button-border-dark);
     --editor-border: var(--red-editor-border);
 }
 
 body.theme-rainbow {
+    /* text color  */
+    --blue-txt: #C850C0;
+    --white-txt: #4158D0;
+
+    /* background color */
     --dark-bg: none;
     --blue-bg: none;
     --blue-bg-active: #4357c9f1;
-background-color: #4158D0;
-background-image: linear-gradient(135deg, #4158D0 0%, #C850C0 35%, #FFCC70 73%, #ffffff 100%);       
+    background-color: #4158D0;
+    background-image: linear-gradient(135deg, #4158D0 0%, #C850C0 35%, #FFCC70 73%, #ffffff 100%);
+
+    /*fill color*/
+    --dark-fill: #4158D0;
+    --blue-fill: #4158D0;
+
+    /*borders*/
+    --notes-border: .5px solid #4158D0;
+    --links-border: 2.5px solid #4158D0;
+    --button-border-blue: 1.5px solid #4158D0;
+    --editor-border: 2.5px solid #4158D0;
+}
+
+body.theme-dark {
+    background: #0D0706;
+    /* text color  */
+    --white-txt: #0D0706;
+    --dark-txt: #5E9ABF;
+    --blue-txt: #3A5D8C;
+    /* background color */
+    --white-bg: #0D0706;
+    --light-grey-bg: #253C59;
+    --dark-bg: #5E9ABF;
+    --blue-bg: #3A5D8C;
+    --blue-bg-active: #20334d;
+    /*fill color*/
+    --white-fill: #0D0706;
+    --dark-fill: #5E9ABF;
+    --blue-fill: #3A5D8C;
+    --selected-fill: gold;
+    /* font */
+    --title-font: 'Playfair Display', serif;
+    --text-font: 'Montserrat', sans-serif;
+    /*borders*/
+    --notes-border: 2.5px solid #253C59;
+    --links-border: 2.5px solid #3A5D8C;
+    --button-border-dark: 1.5px solid #5E9ABF;
+    --button-border-blue: 1px solid #3A5D8C;
+    --editor-border: 1px solid #253C59;
+    /*shadows*/
+    --hover-note-shadow: 0 1px 2px 0 rgba(176, 188, 197, 0.3), 0 1px 3px 1px rgba(188, 200, 209, 0.15);
 }
 
 /* IF WE HAVE TIME TO MAKE DARKMODE
